[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "pymetheus"
version = "1.0.0.dev1"
authors = [
    { name="Zach Ramsey" },
]
description = ""
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/zachramsey/pymetheus"